--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,2 +1,3 @@
 - Pankaj Singh (pankaj_at_policyinnovations.in)
 - Abhishek Choudhary (acabhishek942_at_gmail.com)
+- Abhyuday Pratap (abhyudaypratap_at_outlook.com)
